--- a/Basis/BigQuery_and_SQL_Practice.ipynb
+++ b/Basis/BigQuery_and_SQL_Practice.ipynb
@@ -6,7 +6,7 @@
       "name": "BigQuery and SQL Practice.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP5wMHfnE5VMaDSVN9Hh+jU",
+      "authorship_tag": "ABX9TyN/wm2hcILzOVL4kzeRf3Pf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rYaO7D9bLkBq"
+      },
+      "source": [
+        "Using the data of The Chicago Police station in 2015"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -42,7 +51,7 @@
         "auth.authenticate_user()\n",
         "print('Authenticated')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,7 +71,7 @@
         "import os\n",
         "os.environ[\"GCLOUD_PROJECT\"] = \"BigQuerySQLExercises\""
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -89,7 +98,7 @@
         "for table in tables:\n",
         "  print(table.table_id)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,7 +166,7 @@
         "# Print the table\n",
         "client.list_rows(table, max_results = 5).to_dataframe()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -671,7 +680,7 @@
         "accidents_by_days = query_job.to_dataframe()\n",
         "accidents_by_days\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
